FIX: gray bands on mobile

--- a/files/critical.css
+++ b/files/critical.css
@@ -24,7 +24,7 @@ body {
 #content { 
   position: relative; 
   width: 100%; 
-  background: #f2f2f2; 
+  background: #ffffff; 
 }
 
 #banner {
